--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </label>
 
             <label for="email">
-                <span>Email</span>
+                <span>E-mail</span>
                 <input type="email" id="email" name="email">
             </label>
 
@@ -46,7 +46,7 @@
             <input type="submit" value="Sing Up">
         </form>
     </main>
-    <section class="il">
+    <section class="fortin">
         <img src="img/inform.png">
         <div class="circle"></div>
     </section>
